replays/errorlog-20181021-110616+0200-1540112776-32-32-0.log

Initialization Phase
================================================================
error: communication error with bot: read failed, errno was: 0 (Success)
Bot error output was:
  File "MyBot.py", line 102
    if task == 'chose_spot'
                          ^
SyntaxError: invalid syntax

